--- a/modeling headway FA22/manuscript figs/full model, instant hillslopes, 16 runs + default/default_new math_softer sed for width comp.ipynb
+++ b/modeling headway FA22/manuscript figs/full model, instant hillslopes, 16 runs + default/default_new math_softer sed for width comp.ipynb
@@ -132,7 +132,7 @@
     "        Eb[:-1] = (Eb_p[:-1] + Eb_a[:-1]) / B_valley[:-1]\n",
     "        \n",
     "        # calc lateral flux\n",
-    "        ql[:-1] = ((Eb[:-1] * gamma)/beta) * (1 - np.exp(-zeta * x[1:]/3))\n",
+    "        ql[:-1] = ((Eb[:-1] * gamma)/beta) * (1 - np.exp(-zeta * x[1:]/3)) # should be sed atr factor for both terms!\n",
     "        \n",
     "        # calc grain attrition\n",
     "        atr = Qs * zeta\n",
